fix: dropdown :hover and icon alignement

--- a/packages/mikado_reborn/src/components/Dropdown/Dropdown.scss
+++ b/packages/mikado_reborn/src/components/Dropdown/Dropdown.scss
@@ -66,7 +66,7 @@
       }
 
       li {
-        &:not([aria-selected]) {
+        &:not([aria-selected=true]) {
           cursor: pointer;
 
           &:hover {
@@ -76,7 +76,7 @@
 
         padding: 1rem 2rem;
 
-        &:not([aria-selected]) {
+        &:not([aria-selected=true]) {
           padding-left: 5rem;
         }
         .mkr__icon {
